// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a title and description are provided should render correctly 1`] = `
<div>
  <SideEffect(Head)>
    <title>
      my title
    </title>
    <meta
      content="my description"
      name="description"
    />
  </SideEffect(Head)>
  <Connect(Header) />
  <p>
    hello
  </p>
</div>
`;

exports[`not title and description are provided should render correctly 1`] = `
<div>
  <Connect(Header) />
  <p>
    hello
  </p>
</div>
`;
